--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/Css/style.css">
+    <link rel="stylesheet" href="./assets/Css/responsive.css">
     <title>Ever Night Dance</title>
 </head>
 <body>
@@ -34,7 +35,7 @@
         </video>
     </div>
 
-<script src="script.js"></script>
+<script src="./assets/Js/script.js"></script>
 
 </body>
 </html>
