--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
     <div id="mainContent" class="hidden">
         <h3 id="welcomeText"></h3>
         <div class="gif-container">
-            <img src="Dance Evernight GIF.gif" alt="Evernight dance">
+            <img src="./assets/Dance Evernight GIF.gif" alt="Evernight dance">
         </div>
     </div>
 
     <audio id="music">
-        <source src="eva-music.mp3" type="audio/mpeg">
+        <source src="./assets/eva-music.mp3" type="audio/mpeg">
     </audio>
 
     <div class="video-container" id="videoContainer">
         <video id="videoPlayer" controls>
-            <source src="rickroll.mp4" type="video/mp4">
+            <source src="./assets/rickroll.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
